--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <script>
-        fetch("https://hodlinfo-13.onrender.com/api/getData")
+        fetch("http://localhost:6600/api/get-data")
             .then(response => {
                 if (!response.ok) {
                     throw new Error('Network response was not ok: ' + response.statusText);
@@ -89,9 +89,9 @@
                             <td>${index + 1}</td>
                             <td>${item.name}</td>
                             <td>${item.last}</td>
-                            <td>${item.buy}</td>
-                            <td>${item.sell}</td>
+                            <td>${item.buy}/${item.sell}</td>
                             <td>${item.volume}</td>
+                            <td>${item.base_unit}</td>
                         </tr>`;
                 });
 
